--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -75,6 +75,10 @@ jobs:
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v2
 
+    # Print the current working directory
+    - name: Print working directory
+      run: echo Hello world
+
     # Execute all unit tests in the solution
     - name: Execute unit tests
       run: dotnet test
